hphp/hack/test/typecheck/reified_generics/wildcard_funcall.php.exp
File "wildcard_funcall.php", line 10, characters 11-22:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 10, characters 7-7:
  Expected `T#1`
  File "wildcard_funcall.php", line 10, characters 7-7:
  This type argument to `A` must match exactly (it is invariant)
  File "wildcard_funcall.php", line 10, characters 17-19:
  But got `int`
File "wildcard_funcall.php", line 10, characters 11-22:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 10, characters 17-19:
  Expected `int`
  File "wildcard_funcall.php", line 10, characters 7-7:
  But got `T#1`
  File "wildcard_funcall.php", line 10, characters 7-7:
  This type argument to `A` must match exactly (it is invariant)
File "wildcard_funcall.php", line 11, characters 16-27:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 11, characters 7-12:
  Expected `string`
  File "wildcard_funcall.php", line 11, characters 7-12:
  This type argument to `A` must match exactly (it is invariant)
  File "wildcard_funcall.php", line 11, characters 22-24:
  But got `int`
File "wildcard_funcall.php", line 11, characters 16-27:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 11, characters 22-24:
  Expected `int`
  File "wildcard_funcall.php", line 11, characters 7-12:
  But got `string`
  File "wildcard_funcall.php", line 11, characters 7-12:
  This type argument to `A` must match exactly (it is invariant)
File "wildcard_funcall.php", line 14, characters 11-25:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 14, characters 7-7:
  Expected `T#2`
  File "wildcard_funcall.php", line 14, characters 7-7:
  This type argument to `A` must match exactly (it is invariant)
  File "wildcard_funcall.php", line 14, characters 17-22:
  But got `A<int>`
File "wildcard_funcall.php", line 14, characters 11-25:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 14, characters 17-22:
  Expected `A<int>`
  File "wildcard_funcall.php", line 14, characters 7-7:
  But got `T#2`
  File "wildcard_funcall.php", line 14, characters 7-7:
  This type argument to `A` must match exactly (it is invariant)
File "wildcard_funcall.php", line 15, characters 14-28:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 15, characters 9-9:
  Expected `T#3`
  File "wildcard_funcall.php", line 15, characters 9-9:
  This type argument to `A` must match exactly (it is invariant)
  File "wildcard_funcall.php", line 15, characters 22-24:
  But got `int`
File "wildcard_funcall.php", line 15, characters 14-28:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 15, characters 9-9:
  Expected `T#3`
  File "wildcard_funcall.php", line 15, characters 22-24:
  But got `int`
  File "wildcard_funcall.php", line 15, characters 22-24:
  This type argument to `A` must match exactly (it is invariant)
File "wildcard_funcall.php", line 15, characters 14-28:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 15, characters 22-24:
  Expected `int`
  File "wildcard_funcall.php", line 15, characters 9-9:
  But got `T#3`
  File "wildcard_funcall.php", line 15, characters 9-9:
  This type argument to `A` must match exactly (it is invariant)
File "wildcard_funcall.php", line 15, characters 14-28:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 15, characters 22-24:
  Expected `int`
  File "wildcard_funcall.php", line 15, characters 22-24:
  This type argument to `A` must match exactly (it is invariant)
  File "wildcard_funcall.php", line 15, characters 9-9:
  But got `T#3`
File "wildcard_funcall.php", line 16, characters 19-33:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 16, characters 9-14:
  Expected `string`
  File "wildcard_funcall.php", line 16, characters 9-14:
  This type argument to `A` must match exactly (it is invariant)
  File "wildcard_funcall.php", line 16, characters 27-29:
  But got `int`
File "wildcard_funcall.php", line 16, characters 19-33:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 16, characters 9-14:
  Expected `string`
  File "wildcard_funcall.php", line 16, characters 27-29:
  But got `int`
  File "wildcard_funcall.php", line 16, characters 27-29:
  This type argument to `A` must match exactly (it is invariant)
File "wildcard_funcall.php", line 16, characters 19-33:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 16, characters 27-29:
  Expected `int`
  File "wildcard_funcall.php", line 16, characters 9-14:
  But got `string`
  File "wildcard_funcall.php", line 16, characters 9-14:
  This type argument to `A` must match exactly (it is invariant)
File "wildcard_funcall.php", line 16, characters 19-33:
Invalid argument (Typing[4110])
  File "wildcard_funcall.php", line 16, characters 27-29:
  Expected `int`
  File "wildcard_funcall.php", line 16, characters 27-29:
  This type argument to `A` must match exactly (it is invariant)
  File "wildcard_funcall.php", line 16, characters 9-14:
  But got `string`
File "wildcard_funcall.php", line 10, characters 7-7:
Invalid reified hint (Typing[4305])
  File "wildcard_funcall.php", line 10, characters 7-7:
  This is a wildcard, it cannot be used as a reified type argument
  File "wildcard_funcall.php", line 4, characters 15-15:
  `T` is reified
File "wildcard_funcall.php", line 14, characters 7-7:
Invalid reified hint (Typing[4305])
  File "wildcard_funcall.php", line 14, characters 7-7:
  This is a wildcard, it cannot be used as a reified type argument
  File "wildcard_funcall.php", line 4, characters 15-15:
  `T` is reified
File "wildcard_funcall.php", line 15, characters 7-10:
Invalid reified hint (Typing[4305])
  File "wildcard_funcall.php", line 15, characters 9-9:
  This is a wildcard, it cannot be used as a reified type argument
  File "wildcard_funcall.php", line 4, characters 15-15:
  `T` is reified
File "wildcard_funcall.php", line 15, characters 9-9:
Invalid reified hint (Typing[4305])
  File "wildcard_funcall.php", line 15, characters 9-9:
  This is a wildcard, it cannot be used as a reified type argument
  File "wildcard_funcall.php", line 4, characters 15-15:
  `T` is reified
